Initialization and AUthentication flow

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="App.css">
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + Motoko</title>
+    <title>K-Stream</title>
   </head>
-  <body>
+  <body class="bg-[#1c1c1e] container mx-auto">
     <div id="root"></div>
-    <script type="module" src="./main.tsx"></script>
+    <script type="module" src="./main.jsx"></script>
   </body>
 </html>
